Added Toolbar, CoordinatorLayout, RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">arXiv Reader</string>
+    <string name="unknown_title">Unknown title</string>
 </resources>
